First row/columns added along with footer

--- a/index.html
+++ b/index.html
@@ -44,24 +44,46 @@
     <!-- ROWS & COLUMNS -->
     <section class="wrapper">
         <div class="row">
-            <div class="col-md-3">
-                <div class="row">
+            <div class="col-md-4">
+                <div class="row sec1">
                     <img src="assets/images/profilepic.jpg" class="profilepic">
-                </div>
-                <div class="row">
-                    Skills: HTML | CSS | JAVASCRIPT | GIT |
+                    <p class="sk"><strong>Skills: HTML | CSS | JAVASCRIPT | GIT</strong></p>
                 </div>
             </div>
 
-            <div class="col-ms-6">
-
+            <div class="col-md-4">
+                <h2>MEET & GREET</h2>
+                <p>Come and meet Joe and view his work at this year's Toronto job fair on September **, **** at 11:00am.</p>
+                <p>See you there!</p>
             </div>
 
-            <div class="col-md-3">
-
+            <div class="col-md-4">
+                <h2>NEWS</h2>
+                <p>With the release of HTML5 and the recent updates to Bootstrap, detailing in web development has never been so percise!  Follow the links below for more information.</p>
+                <a href="https://en.wikipedia.org/wiki/HTML" target="_blank">HTML 5 wikipedia</a>
+                <br>
+                <a href="https://blog.getbootstrap.com/" target="_blank">Bootstrap Blog</a>
             </div>
         </div>
     </section>
+
+    <!-- FOOTER -->
+    <footer class="fixed-bottom">
+        <div class="copyright"><small>&copy; Joe Designs</small></div>
+        <div class="footernav">
+                <ul class="nav nav-pills">
+                        <li class="nav-item">
+                        <a class="nav-link active" href="index.html">HOME</a>
+                        </li>
+                        <li class="nav-item">
+                        <a class="nav-link active" href="portfolio.html">PORTFOLIO</a>
+                        </li>
+                        <li class="nav-item">
+                        <a class="nav-link active" href="contact.html">CONTACTS</a>
+                        </li>
+                </ul>
+        </div>
+    </footer>
 
     </div>
 </body>
