Portfolio album images added along with descriptions

--- a/index.html
+++ b/index.html
@@ -42,30 +42,45 @@
     </div>
 
     <!-- ROWS & COLUMNS -->
-    <section class="wrapper">
-        <div class="row">
-            <div class="col-md-4">
-                <div class="row sec1">
-                    <img src="assets/images/profilepic.jpg" class="profilepic">
-                    <p class="sk"><strong>Skills: HTML | CSS | JAVASCRIPT | GIT</strong></p>
-                </div>
-            </div>
-
-            <div class="col-md-4">
-                <h2>MEET & GREET</h2>
-                <p>Come and meet Joe and view his work at this year's Toronto job fair on September **, **** at 11:00am.</p>
-                <p>See you there!</p>
-            </div>
-
-            <div class="col-md-4">
-                <h2>NEWS</h2>
-                <p>With the release of HTML5 and the recent updates to Bootstrap, detailing in web development has never been so percise!  Follow the links below for more information.</p>
-                <a href="https://en.wikipedia.org/wiki/HTML" target="_blank">HTML 5 wikipedia</a>
-                <br>
-                <a href="https://blog.getbootstrap.com/" target="_blank">Bootstrap Blog</a>
+<div class="container">
+    <div class="row">
+        <div class="col-md-4">
+            <div class="row sec1">
+                <img src="assets/images/profilepic.jpg" class="profilepic">
+                <p class="sk"><strong>Skills: HTML | CSS | JAVASCRIPT | GIT</strong></p>
             </div>
         </div>
-    </section>
+
+        <div class="col-md-4">
+            <h2>MEET & GREET</h2>
+            <p>Come and meet Joe and view his work at this year's Toronto job fair on September **, **** at 11:00am.</p>
+            <p>See you there!</p>
+        </div>
+
+        <div class="col-md-4">
+            <h2>NEWS</h2>
+            <p>With the release of HTML5 and the recent updates to Bootstrap, detailing in web development has never been so percise!  Follow the links below for more information.</p>
+            <a href="https://en.wikipedia.org/wiki/HTML" target="_blank">HTML 5 wikipedia</a>
+            <br>
+            <a href="https://blog.getbootstrap.com/" target="_blank">Bootstrap Blog</a>
+        </div>
+    </div>
+
+    <div class="row">
+            <div class="col-md-8">
+               <h2>HEADER</h2>
+               <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quia ex necessitatibus, sunt atque qui dolorem eum vitae laboriosam ipsa laudantium iusto nulla voluptatibus, quaerat placeat doloribus, corrupti ab saepe expedita!</p>
+               <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quia ex necessitatibus, sunt atque qui dolorem eum vitae laboriosam ipsa laudantium iusto nulla voluptatibus, quaerat placeat doloribus, corrupti ab saepe expedita!</p>
+               <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quia ex necessitatibus, sunt atque qui dolorem eum vitae laboriosam ipsa laudantium iusto nulla voluptatibus, quaerat placeat doloribus, corrupti ab saepe expedita!</p>
+               <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quia ex necessitatibus, sunt atque qui dolorem eum vitae laboriosam ipsa laudantium iusto nulla voluptatibus, quaerat placeat doloribus, corrupti ab saepe expedita!</p>
+            </div>
+
+            <div class="col-md-4">
+                <h2>HEADER</h2>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolore eum omnis iste veniam ex maxime aspernatur ad repellendus aut iusto magni harum aliquam tenetur accusantium nobis quod odit, ipsum consectetur.</p>
+            </div>
+        </div>
+    </div>
 
     <!-- FOOTER -->
     <footer class="fixed-bottom">
