Altered header and added sticky footer

--- a/index.html
+++ b/index.html
@@ -16,27 +16,33 @@
     
     <div class="container">
     <!-- HEADER -->
-        <header>
-            <h1 id="logo">
-                <a class="mainlogo" href="index.html">Joe's <br> Web Designs</a>
-            </h1>
-            <nav>
-                <ul class="nav nav-pills">
-                        <li class="nav-item">
-                        <a class="nav-link active" href="index.html">HOME</a>
-                        </li>
-                        <li class="nav-item">
-                        <a class="nav-link active" href="portfolio.html">PORTFOLIO</a>
-                        </li>
-                        <li class="nav-item">
-                        <a class="nav-link active" href="contact.html">CONTACTS</a>
-                        </li>
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+            <a class="navbar-brand" href="index.html">Joe's Web Designs</a>
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            
+            <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                <ul class="navbar-nav mr-auto">
+                <li class="nav-item active">
+                    <a class="nav-link" href="index.html">HOME <span class="sr-only">(current)</span></a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="portfolio.html">PORTFOLIO</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="contact.html">CONTACT</a>
+                </li>
                 </ul>
-            </nav>
-        </header>
+                <form class="form-inline my-2 my-lg-0">
+                <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
+                <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
+                </form>
+            </div>
+    </nav>
 
     <!-- JUMBOTRON -->
-    <div class="jumbotron">
+    <div class="jumbotron text-center">
         <h1>Joe's Digital Designs and Web Development</h1>
         <p>Welcome to Joe's designs and web development.  Please take a moment to peruse my portfolio to see what developer skills I can offer you today!  Feel free to click on the <strong>CONTACTS</strong> button to reach me with any questions or comments.</p>
     </div>
@@ -84,22 +90,21 @@
 
     <!-- FOOTER -->
     <footer class="fixed-bottom">
-        <div class="copyright"><small>&copy; Joe Designs</small></div>
-        <div class="footernav">
-                <ul class="nav nav-pills">
-                        <li class="nav-item">
-                        <a class="nav-link active" href="index.html">HOME</a>
-                        </li>
-                        <li class="nav-item">
-                        <a class="nav-link active" href="portfolio.html">PORTFOLIO</a>
-                        </li>
-                        <li class="nav-item">
-                        <a class="nav-link active" href="contact.html">CONTACTS</a>
-                        </li>
-                </ul>
-        </div>
-    </footer>
-
+            <div class="copyright"><small>&copy; Joe Designs</small></div>
+            <div class="footernav">
+                    <ul class="nav nav-pills">
+                            <li class="nav-item">
+                            <a class="nav-link active" href="index.html">HOME</a>
+                            </li>
+                            <li class="nav-item">
+                            <a class="nav-link active" href="portfolio.html">PORTFOLIO</a>
+                            </li>
+                            <li class="nav-item">
+                            <a class="nav-link active" href="contact.html">CONTACTS</a>
+                            </li>
+                    </ul>
+            </div>
+        </footer>
     </div>
 </body>
 </html>
