--- a/portfolio.html
+++ b/portfolio.html
@@ -16,24 +16,30 @@
     
     <div class="container">
     <!-- HEADER -->
-        <header>
-            <h1 id="logo">
-                <a class="mainlogo" href="index.html">Joe's <br> Web Designs</a>
-            </h1>
-            <nav>
-                <ul class="nav nav-pills">
-                        <li class="nav-item">
-                        <a class="nav-link active" href="index.html">HOME</a>
-                        </li>
-                        <li class="nav-item">
-                        <a class="nav-link active" href="portfolio.html">PORTFOLIO</a>
-                        </li>
-                        <li class="nav-item">
-                        <a class="nav-link active" href="contact.html">CONTACTS</a>
-                        </li>
-                </ul>
-            </nav>
-        </header>
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+        <a class="navbar-brand" href="index.html">Joe's Web Designs</a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+            <ul class="navbar-nav mr-auto">
+            <li class="nav-item active">
+                <a class="nav-link" href="index.html">HOME <span class="sr-only">(current)</span></a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="portfolio.html">PORTFOLIO</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="contact.html">CONTACT</a>
+            </li>
+            </ul>
+            <form class="form-inline my-2 my-lg-0">
+            <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
+            <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
+            </form>
+        </div>
+        </nav>
 
         <main role="main">
 
